# FUI

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: skia.cmake
src/: CMakeLists.txt  Win32-Ganesh-D3D12.cpp  Win32-Ganesh-D3D12.hpp  app.exe.manifest  demo-icon.cmake  demo.cmake  demo.cpp  demo.hpp  demo_win32.cpp  demo_win32.hpp  exports-config.cmake.in  lib.cmake  main.cpp
src/FredEmmott/: CMakeLists.txt  GUI.hpp  memory.hpp
src/FredEmmott/GUI/: AcrylicBrush.cpp  AcrylicBrush.hpp  ActivatedFlag.hpp  Bitmap.hpp  Brush.cpp  Brush.hpp  Brush_Direct2D.cpp  Brush_Skia.cpp  Button.cpp  Button.hpp  Card.cpp  Card.hpp  Color.cpp  Color.hpp  Colors.cpp  Colors.hpp  CornerRadius.hpp  Direct2DRenderer.cpp  Direct2DRenderer.hpp  EasingFunctions.hpp  Edges.hpp  ExitException.hpp  FocusManager.cpp  FocusManager.hpp  Font.cpp  Font.hpp  FontWeight.hpp  FrameRateRequirement.hpp  IconProvider.cpp  IconProvider.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  Lerp.cpp  Lerp.hpp  LinearGradientBrush.cpp  LinearGradientBrush.hpp  LinearGradientBrush_Direct2D.cpp  LinearGradientBrush_Skia.cpp  (+57 more)
src/FredEmmott/GUI/Immediate/: Button.cpp  Button.hpp  Card.cpp  Card.hpp  CheckBox.cpp  CheckBox.hpp  ComboBox.cpp  ComboBox.hpp  ComboBoxButton.cpp  ComboBoxButton.hpp  ComboBoxItem.cpp  ComboBoxItem.hpp  ComboBoxPopup.cpp  ComboBoxPopup.hpp  ContentDialog.cpp  ContentDialog.hpp  Disabled.cpp  Disabled.hpp  EnqueueAdditionalFrame.cpp  EnqueueAdditionalFrame.hpp  FontIcon.cpp  FontIcon.hpp  GPUTexture.cpp  GPUTexture.hpp  HyperlinkButton.cpp  HyperlinkButton.hpp  ID.hpp  Label.cpp  Label.hpp  Leaf.hpp  MenuFlyout.cpp  MenuFlyout.hpp  NavigationView.cpp  NavigationView.hpp  NumberBox.cpp  NumberBox.hpp  PopupWindow.cpp  PopupWindow.hpp  ProgressRing.hpp  PushID.cpp  (+35 more)
src/FredEmmott/GUI/Interpolation/: CubicBezier.hpp  Linear.cpp  Linear.hpp
src/FredEmmott/GUI/StaticTheme/: Resource.hpp  Theme.hpp
src/FredEmmott/GUI/StaticTheme/Common/: Animation.hpp
src/FredEmmott/GUI/StaticTheme/detail/: Button.handwritten.cpp  Button.handwritten.hpp  ContentDialog.handwritten.cpp  ContentDialog.handwritten.hpp  Generic.handwritten.cpp  Generic.handwritten.hpp  HyperlinkButton.handwritten.cpp  HyperlinkButton.handwritten.hpp  MenuFlyout.handwritten.cpp  MenuFlyout.handwritten.hpp  NavigationView.handwritten.cpp  NavigationView.handwritten.hpp  ResolveColor.hpp  ResourceSupertype.hpp  StaticThemedAcrylicBrush.hpp  StaticThemedLinearGradientBrush.hpp  TextBox.handwritten.cpp  TextBox.handwritten.hpp  TitleBar.handwritten.cpp  TitleBar.handwritten.hpp  ToolTip.handwritten.cpp  ToolTip.handwritten.hpp
src/FredEmmott/GUI/Widgets/: Button.cpp  Button.hpp  Card.cpp  Card.hpp  CheckBox.cpp  CheckBox.hpp  ComboBoxItem.cpp  ComboBoxItem.hpp  ComboBoxItemButton.cpp  ComboBoxItemButton.hpp  Focusable.hpp  GPUTexture.cpp  GPUTexture.hpp  HyperlinkButton.cpp  HyperlinkButton.hpp  IHasSingleChild.hpp  Label.cpp  Label.hpp  Layout.cpp  Layout.hpp  MenuFlyoutItem.cpp  MenuFlyoutItem.hpp  NavigationView.cpp  NavigationView.hpp  NavigationViewBackButton.cpp  NavigationViewBackButton.hpp  NavigationViewButton.cpp  NavigationViewButton.hpp  NavigationViewItem.cpp  NavigationViewItem.hpp  NavigationViewSettingsItem.cpp  NavigationViewSettingsItem.hpp  NavigationViewTogglePaneButton.cpp  NavigationViewTogglePaneButton.hpp  PopupWIndow.cpp  PopupWindow.cpp  PopupWindow.hpp  ProgressRing.cpp  ProgressRing.hpp  RadioButton.cpp  (+39 more)
src/FredEmmott/GUI/Windows/: AcrylicController.cpp  AcrylicController.hpp  DirectCompositionController.cpp  DirectCompositionController.hpp  MicaController.cpp  MicaController.hpp  Win32-Ganesh-D3D12.cpp  Win32-Ganesh-D3D12.hpp  Win32Direct2DWindow.cpp  Win32Direct2DWindow.hpp  Win32Direct3D12GaneshWindow.cpp  Win32Direct3D12GaneshWindow.hpp  Win32Window.cpp  Win32Window.hpp
src/FredEmmott/GUI/detail/: AutomationActivityFlag.hpp  ComboBoxStyles.cpp  ComboBoxStyles.hpp  ScrollBarStyles.cpp  ScrollBarStyles.hpp  SelectionPill.cpp  SelectionPill.hpp  direct2d_detail.hpp  font_detail.hpp  icu.hpp  immediate_detail.cpp  immediate_detail.hpp  renderer_detail.cpp  renderer_detail.hpp  style_detail.hpp  system_font_detail.hpp  widget_detail.cpp  widget_detail.hpp  win32_detail.cpp  win32_detail.hpp
src/FredEmmott/GUI/detail/Widget/: ScrollBar.hpp  transitions.hpp
src/FredEmmott/GUI/detail/direct_write_detail/: DirectWriteFontProvider.cpp  DirectWriteFontProvider.hpp
src/FredEmmott/GUI/detail/immediate/: CaptionResultMixin.cpp  CaptionResultMixin.hpp  ScopeableResultMixin.hpp  ScopedResultMixin.hpp  SelectionManager.hpp  StyledResultMixin.hpp  TextBlockStylesMixin.hpp  TextBlockStylesResultMixin.hpp  ToolTipResultMixin.hpp  ValueResultMixin.hpp  Widget.cpp  Widget.hpp  WidgetlessResultMixin.hpp  widget_from_result.hpp
src/FredEmmott/GUI/events/: Event.hpp  HitTestEvent.hpp  KeyCode.hpp  KeyEvent.hpp  MouseButton.hpp  MouseButtonPressEvent.hpp  MouseButtonReleaseEvent.hpp  MouseEvent.hpp  MouseMoveEvent.hpp  TextInputEvent.hpp
src/FredEmmott/memory/: detail.hpp  memory_detail.hpp
src/FredEmmott/type_traits/: concepts.hpp
src/FredEmmott/utility/: almost_equal.hpp  bitflag_enums.hpp  drop_last_t.hpp  lazy_init.hpp  moved_flag.hpp  type_tag.hpp  unordered_map.hpp
src/xaml-to-fui-statictheme/: AliasMap.cpp  AliasMap.hpp  CMakeLists.txt  GetAcrylicBrush.cpp  GetAcrylicBrush.hpp  GetAlias.cpp  GetAlias.hpp  GetBoolean.cpp  GetBoolean.hpp  GetColor.cpp  GetColor.hpp  GetCornerRadius.cpp  GetCornerRadius.hpp  GetCpp.cpp  GetCpp.hpp  GetDesktopAcrylicBackdrop.cpp  GetDesktopAcrylicBackdrop.hpp  GetHexColorValue.cpp  GetHexColorValue.hpp  GetHpp.cpp  GetHpp.hpp  GetLinearGradientBrush.cpp  GetLinearGradientBrush.hpp  GetNumber.cpp  GetNumber.hpp  GetResources.cpp  GetResources.hpp  GetSolidColorBrush.cpp  GetSolidColorBrush.hpp  GetString.cpp  GetString.hpp  GetThickness.cpp  GetThickness.hpp  Metadata.hpp  ResolveColorReference.cpp  ResolveColorReference.hpp  Resource.hpp  SortResources.cpp  SortResources.hpp  Theme.hpp  (+1 more)
(+14 files in other folders)
